--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,3 +1,23 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+#draggable { 
+  width: 125px; 
+  height: 97px; 
+  //padding: 0.5em; 
+  float: left;
+  background: url("img_drag.jpg");
+  
+  margin: 110px 10px 10px 0; 
+  }
+#droppable { 
+  width: 300px; 
+  height: 250px; 
+  //padding: 0.5em; 
+  float: left; 
+  margin: 10px;
+  background-image: url("img_working.jpg");
+  }
+#droppable.full {
+  background-image: url("img_full.jpg");
+}  
