--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,21 +1,47 @@
 !!!
-%html
+%html{lang: "en"}
   %head
+    %meta{charset: "utf-8"}
+    %meta{name: "viewport", content: "width=device-width, initial-scale=1"}
+    %meta{name: "turbo-cache-control", content: "no-cache"}
+    
     %title Captcha Demo
-    %meta{:charset => "utf-8"}
-    %meta{"http-equiv" => "X-UA-Compatible", :content => "IE=edge,chrome=1"}
-    %meta{:name => "viewport", :content => "width=device-width, initial-scale=1, maximum-scale=1"}
-    = stylesheet_link_tag :application
-    = javascript_include_tag :application
+    
     = csrf_meta_tags
-  %body{:class => params[:controller]}
-    #container.container
-      %header
-        %nav
-          %ul.hmenu
-            = render 'shared/navigation'
-        - flash.each do |name, msg|
-          = content_tag :div, msg, :id => "flash_\#{name}" if msg.is_a?(String)
-      #main{:role => "main"}
+    = csp_meta_tag
+    
+    / Preload assets
+    %link{rel: "preconnect", href: "https://fonts.googleapis.com"}
+    %link{rel: "preconnect", href: "https://fonts.gstatic.com", crossorigin: true}
+    
+    / Styles
+    = stylesheet_link_tag "application", media: "all", "data-turbo-track": "reload"
+    = stylesheet_link_tag "https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+    
+    / JavaScript
+    = javascript_importmap_tags
+
+  %body{class: controller_name}
+    .container
+      %header.mb-4
+        %nav.navbar.navbar-expand-lg.navbar-light.bg-light
+          .container-fluid
+            = link_to "Captcha Demo", root_path, class: "navbar-brand"
+            %button.navbar-toggler{"data-bs-toggle": "collapse", "data-bs-target": "#navbarNav"}
+              %span.navbar-toggler-icon
+            #navbarNav.collapse.navbar-collapse
+              = render "shared/navigation"
+              
+      - flash.each do |name, msg|
+        - if msg.is_a?(String)
+          .alert{class: "alert-#{name == 'notice' ? 'success' : 'danger'}", role: "alert"}
+            = msg
+            %button.btn-close{"data-bs-dismiss": "alert"}
+
+      %main.my-4{role: "main"}
         = yield
-      %footer
+
+      %footer.mt-4.py-3.border-top
+        .container.text-center
+          %p.text-muted
+            © #{Time.current.year} Captcha Demo. All rights reserved.
